# pyroll-jmak-recrystallization

./: LICENSE  README.md  hatch.toml  pyproject.toml
docs/: PyRollDocs.cls  docs.md  docs.tex  refs.bib
pyroll/: config.py  jmak.py  material_data.py
pyroll/jmak/: __init__.py  dynamic.py  grain_growth.py  hookdefs.py  jmak.py  material_data.py  metadynamic.py  profile.py  roll_pass.py  static.py  transport.py  unit.py
pyroll/jmak_recrystallization/: __init__.py  common.py  config.py  dynamic.py  material_data.py  metadynamic.py  profile.py  roll_pass.py  transport.py  unit.py
pyroll/sample_plugin/: __init__.py
tests/: test_solve.py  test_solve3.py  test_solve_no_rx.py  test_solve_s355j2.py
