tool.hatch.metadata.allow-direct-references = true

[project]
name = "pyroll-jmak-recrystallization"
description = "Plugin for PyRolL providing softening kinetics and grain size evolution based on JMAK approach."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" },
    { name = "Jennifer Mantel", email = "jennifer.mantel@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core >= 2.1.4, < 3.0",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll.readthedocs.io"

# change these URLs to your needs
Repository = "https://github.com/pyroll-project/pyroll-jmak-recrystallization"
Documentation = "https://github.com/pyroll-project/pyroll-jmak-recrystallization/blob/main/docs/docs.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
